fix filenames wrap, fix preview layout on tablets

--- a/static/css/global.css
+++ b/static/css/global.css
@@ -192,6 +192,7 @@ div.g-loader {
 
 	.g-property-value {
 		font-style: italic;
+		overflow-wrap: break-word;
 	}
 }
 
